# clockish

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOYING.md  LICENSE  NOTICE.md  README.md  README_sdcard_image.md  TODO.md  URL_FACT_GUIDE.md  edit-clockish-config.sh  install.sh  pyproject.toml  run-clockish.sh  uninstall.sh
.github/workflows/: pr-tests.yml
configs/: big-red.yaml  clockish-config.schema.yaml  clockish.yaml  debug-landscape.yaml  debug.yaml  font-behavior-demo.yaml  fourteen-segment.yaml  fullscreen-clock.yaml  landscape-demo.yaml  nixie-1920x1080.yaml  nixie-800x480.yaml  nixie.yaml  nixie24.yaml  sensor-test.yaml  seven-segment.yaml  small.yaml  system-info.yaml  url-fact-sample.yaml  vert-clocks.yaml
configs/display/: framebuffer-1920x1080.yaml  framebuffer-800x480.yaml  ili9486-landscape.yaml  ili9486-portrait.yaml  st7789-240x135.yaml
configs/schema/: clockish-config.schema.yaml
misc/systemd/: disable-cursor-blink.service
scripts/: deploy.sh  download-dseg-font.sh  download-nixie-font.sh  install.sh  patch-venv-utf8.ps1  patch-venv-utf8.sh  pre-pr-check.sh
src/clockish/: __init__.py  __main__.py  colorchart.py  colordepth.py  colors.py  colortest.py  config_validator.py  cornertest.py  display.py  fontdemo.py  platform_utils.py  render_preview.py  render_time_samples.py  transforms.py
src/clockish/drivers/: __init__.py  base.py  framebuffer.py  ili9486.py  st7789.py
tests/: conftest.py  test_all_encoding.py  test_config_validator.py  test_display_fonts.py  test_display_transform_wiring.py  test_json_path_extraction.py  test_platform_utils.py  test_transforms.py
