[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project metadata
# Follows PEP 621 / PyPA standard.  When you're ready to publish to PyPI,
# most of this is already in the right shape.
# =============================================================================
[project]
name = "clockish"
version = "26.6.2"
description = "Clockish is a customizable _whatever_ display for Raspberry Pi with a PIL compatible display driver."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

# Put your own name/email here
authors = [
    { name = "shorted.neuron", email = "55761404+shorted-neuron@users.noreply.github.com" },
]

keywords = ["raspberry-pi", "clock"]   # update as appropriate

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",   # change if needed
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
]

# -- Runtime dependencies -------------------------------------------------------
# Add packages here.  Use platform markers for Pi-only hardware libs so the
# package can still be installed and tested on Windows.
#
# Example:
# Pi architecture values:
#   armv6l   --  Pi 1, Pi Zero (1st gen)          <- don't forget this one!
#   armv7l   --  Pi 2, Pi 3, Pi 4 (32-bit OS)
#   aarch64  --  Pi 3, Pi 4, Pi 5 (64-bit OS), Ubuntu on Pi
#
#   "RPi.GPIO>=0.7.1; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'"
#   "smbus2>=0.4"
dependencies = [
    # Display rendering
    "Pillow>=12.0.0",
    "numpy>=1.21.0",
    # Config files
    "PyYAML>=6.0",
    # Config schema validation (used at startup + ad-hoc via clockish-validate)
    "jsonschema>=4.17",
    # Timezone data (needed on systems without tzdata OS package, e.g. minimal Pi OS)
    "tzdata>=2024.1",
    # pyili9486  --  ILI9486 SPI display driver (Pi only; pulls in spidev which is Linux-only)
    # Source: https://github.com/SirLefti/Python_ILI9486
    "pyili9486>=1.0.0; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    # GPIO  --  rpi-lgpio is the recommended modern backend; RPi.GPIO also works as a drop-in
    "rpi-lgpio>=0.6; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
]

# -- Optional / development dependencies ---------------------------------------
[project.optional-dependencies]
# ST7789-based displays (Pimoroni library + its GPIO/SPI dependencies)
# Install: pip install clockish[st7789]
st7789 = [
    "st7789>=1.0.0; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "gpiod>=2.0; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "gpiodevice>=0.0.4; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",          # linter + formatter
    "mypy",          # type checker
    "yamllint>=1.35",  # YAML style linting (used by clockish-validate --yamllint)
    "pre-commit>=3.5", # git hook framework (run: pre-commit install)
]

# -- CLI entry points ----------------------------------------------------------
[project.scripts]
clockish         = "clockish.display:main"
clockish-preview = "clockish.render_preview:main"
clockish-colors  = "clockish.colorchart:main"
clockish-depth   = "clockish.colordepth:main"
clockish-test    = "clockish.colortest:main"
clockish-fonts   = "clockish.fontdemo:main"
clockish-corners = "clockish.cornertest:main"
clockish-validate = "clockish.config_validator:main"

# -- Where to find packages ----------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/clockish"]

# Also include third-party code in the wheel
# (only needed if third_party/ contains Python packages you import directly)
# packages = ["src/clockish", "third_party/some_upstream"]

# =============================================================================
# Tool configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
