[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# =============================================================================
# Project metadata
# Follows PEP 621 / PyPA standard.  When you're ready to publish to PyPI,
# most of this is already in the right shape.
# =============================================================================
[project]
name = "clockish"
version = "26.7.5"
description = "Clockish is a customizable _whatever_ display for Raspberry Pi with a PIL compatible display driver."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"

# Put your own name/email here
authors = [
    { name = "shorted.neuron", email = "55761404+shorted-neuron@users.noreply.github.com" },
]

keywords = ["raspberry-pi", "clock", "lcd", "display"]   # update as appropriate

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",   # change if needed
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
]

# -- Runtime dependencies -------------------------------------------------------
# Add packages here.  Use platform markers for Pi-only hardware libs so the
# package can still be installed and tested on Windows.
#
# Example:
# Pi architecture values:
#   armv6l   --  Pi 1, Pi Zero (1st gen)          <- don't forget this one!
#   armv7l   --  Pi 2, Pi 3, Pi 4 (32-bit OS)
#   aarch64  --  Pi 3, Pi 4, Pi 5 (64-bit OS), Ubuntu on Pi
#
#   "RPi.GPIO>=0.7.1; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'"
#   "smbus2>=0.4"
dependencies = [
    # Display rendering
    "Pillow>=12.0.0",
    "numpy>=1.21.0",
    # Config files
    "PyYAML>=6.0",
    # Config schema validation (used at startup + ad-hoc via clockish-validate)
    "jsonschema>=4.17",
    # YAML style linting (used by clockish-validate; also installable via apt: yamllint)
    "yamllint>=1.35",
    # Timezone data (needed on systems without tzdata OS package, e.g. minimal Pi OS)
    "tzdata>=2024.1",
    # pyili9486  --  ILI9486 SPI display driver (Pi only; pulls in spidev which is Linux-only)
    # Source: https://github.com/SirLefti/Python_ILI9486
    "pyili9486>=1.0.0; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    # GPIO  --  rpi-lgpio is the recommended modern backend; RPi.GPIO also works as a drop-in
    "rpi-lgpio>=0.6; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
]

# -- Optional / development dependencies ---------------------------------------
[project.optional-dependencies]
# ST7789-based displays (Pimoroni library + its GPIO/SPI dependencies)
# Install: pip install clockish[st7789]
st7789 = [
    "st7789>=1.0.0; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "gpiod>=2.0; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
    "gpiodevice>=0.0.4; platform_machine == 'armv6l' or platform_machine == 'armv7l' or platform_machine == 'aarch64'",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",          # linter + formatter
    "mypy",          # type checker
    "pre-commit>=3.5", # git hook framework (run: pre-commit install)
    # numpy<2.5 -- numpy 2.5.0 (2026) ships typing stubs using PEP 695 "type X = ..."
    # syntax UNCONDITIONALLY (not version-guarded), which mypy refuses to parse
    # under --python-version 3.11 (this project's pinned target, matching
    # Raspberry Pi OS "bookworm"): "Type statement is only supported in Python
    # 3.12 and greater". This is a mypy/numpy-stub compatibility gap, NOT a
    # runtime issue -- clockish's actual numpy usage (drivers/framebuffer.py)
    # is unaffected at any version. Capped here (dev/CI/mypy tooling only) so
    # `pip install -e ".[dev]"` always resolves a numpy whose stubs mypy can
    # parse; end users installing plain `clockish` are NOT constrained by this.
    # Bump/remove once mypy or numpy resolves the incompatibility upstream.
    "numpy<2.5",
]

# -- CLI entry points ----------------------------------------------------------
[project.scripts]
clockish         = "clockish.display:main"
clockish-preview = "clockish.render_preview:main"
clockish-colors  = "clockish.colorchart:main"
clockish-depth   = "clockish.colordepth:main"
clockish-test    = "clockish.colortest:main"
clockish-fonts   = "clockish.fontdemo:main"
clockish-corners = "clockish.cornertest:main"
clockish-validate = "clockish.config_validator:main"
clockish-time-samples = "clockish.render_time_samples:main"

# -- Where to find packages ----------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/clockish"]

# Also include third-party code in the wheel
# (only needed if third_party/ contains Python packages you import directly)
# packages = ["src/clockish", "third_party/some_upstream"]

# =============================================================================
# Tool configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]   # pycodestyle, pyflakes, isort

[tool.ruff.lint.per-file-ignores]
# render_preview.py installs hardware stubs (RPi.GPIO, spidev, pyili9486, ...)
# BEFORE importing clockish -- each "late" import in this file is deliberately
# placed right after the stub block it depends on (see the module docstring).
# Reordering to satisfy E402 would defeat the stubbing.
"src/clockish/render_preview.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_incomplete_defs = false
strict_optional = false
allow_untyped_calls = true
no_implicit_optional = false
disable_error_code = ["name-defined", "var-annotated", "attr-defined", "assignment", "method-assign", "func-returns-value"]
